--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ h2 {
 }
 
 h3 {
-    color: #979b9d;
+    color: #1d1d1d;
     font-size: 20px;
     font-family: "Onest", sans-serif;
     font-style: normal;
