--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ header nav li {
 
 header nav li a {
     font-family: "Onest", sans-serif;
-    color: #979b9d;
+    color: #c2c9d1;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 14px;
